--- a/index.html
+++ b/index.html
@@ -15,47 +15,23 @@
       <h1>How to Train Your Dragon</h1>
       <p>By - Vedant Barot</p>
       <p>
-        The first movie in the HTTYD trilogy was released March 26, 2010. Following this movie, 2 shows and 2 more movies would be released with the last film in 2019 marking the end of this decade long trilogy.
+        The first movie in the HTTYD trilogy was released March 26, 2010. Following this movie, 2 shows and 2 more movies would be released with the last film in 2019, marking the end of this decade long trilogy.
       </p>
       <p>
-        In an online movie summary, it states: "In Earth's future, a global crop
-        blight and second Dust Bowl are slowly rendering the planet
-        uninhabitable. Professor Brand (Michael Caine), a brilliant NASA
-        physicist, is working on plans to save mankind by transporting Earth's
-        population to a new home via a wormhole. But first, Brand must send
-        former NASA pilot Cooper (Matthew McConaughey) and a team of researchers
-        through the wormhole and across the galaxy to find out which of three
-        planets could be mankind's new home."
+        The trilogy is placed around the life of a troubled, misfit teen (Hiccup) from the island of Berk. His inability to fight dragons seperates him from the rest of his society, despite the fact that his father (Stoick) is the chief of the tribe. Hiccup is placed in dragon fighting school where he manages to reach the top of his class due to his unexpected friendship with an elusive nightfury (Toothless). This connection with the dragon allows him to learn the true nature of these reptiles and brings him to the conclusion that the centuries long conflict between man and beast is pointless.
       </p>
       <p>
-        I find the movie to be much more than just this summary, but I can't
-        spoil it, and that's something you need to figure out on your own.
+        The summary of the first movie is simply just a start in a decade long trilogy where Hiccup leads his team of dragon fliers on adventures for the good of both Viking and dragon kind.
       </p>
       <p>
-        The movie stars Matthew McConaughey, Anne Hathaway, David Gyasi, and Wes
-        Bentley as the 4 main astronauts embarking on the mission to search for
-        a new planet to call home. The cast works great together (for their time
-        onscreen) and the flow is unmatched. These are all very skilled actors,
-        even while some may have more movie background than others.
+        The nostalgic soundtracks in these movies are the work of John Powell. The main characters in the movies are voiced by many well known celebrities such as Jay Baruchel (Hiccup), Gerard Butler (Stoick the Vast), America Ferrera (Astrid), Kristen Wiig (Ruffnut), T.J. Miller (Tuffnut), Jonah Hill (Snotlout) and Craig Ferguson as (Gobber) to name a few.
       </p>
       <p class="bold">
-        Heres one of the main filming locations for Interstellar as shown on
-        google maps:
+        The fictional island of Berk is based of a real inhabited island located in Staffa, Scotland. The island is a historically accurate location as those islands were the first place the Vikings inhabited and the last place they left. 
       </p>
       <p>
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3482269.208783521!2d-24.51807047736144!3d64.77548091553801!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48d22b52a3eb6043%3A0x6f8a0434e5c1459a!2sIceland!5e0!3m2!1sen!2sca!4v1683043067575!5m2!1sen!2sca"
-          width="600"
-          height="450"
-          style="border: 0"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"
-        ></iframe>
+        <img src="img/berk2.jpg" alt="Island" width="600" height="500">
       </p>
-      <a href="https://www.movie-locations.com/movies/i/Interstellar.php"
-        >Some parts were also filmed in Alberta! (click me)</a
-      >
     </div>
   </body>
 </html>
