--- a/movie.html
+++ b/movie.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>All about Interstellar - Video Embed</title>
+    <title>HTTYD - Test Drive </title>
     <link rel="stylesheet" href="CSS/movie.css" />
     <script src="JS/gallery.js"></script>
   </head>
@@ -12,18 +12,10 @@
       <a class="nav" href="movie.html">Movie clip</a>
     </header>
     <div class="main">
-      <h1>Famous movie clip</h1>
-      <p>Here's the famous docking scene from Interstellar:</p>
-      <iframe
-        width="560"
-        height="315"
-        src="https://www.youtube.com/embed/onVhbeY7nLM"
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen
-      ></iframe>
-      <p>(it's pretty cool)</p>
+      <h1>Famous Movie Clip</h1>
+      <p>The first time Hiccup properly rode Toothless</p>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/LECmyZB-cgM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      <p>W music fr</p>
     </div>
   </body>
 </html>
