--- a/quiz.html
+++ b/quiz.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>All about Interstellar - Quiz</title>
+    <title>How To Train Your Dragon -</title>
     <link rel="stylesheet" href="CSS/quiz.css" />
     <script defer src="JS/quiz.js"></script>
   </head>
@@ -13,21 +13,20 @@
     </header>
     <div class="main">
       <h1>Quiz</h1>
-      <p class="bold">If you pass this quiz you get a free cookie</p>
+      <p class="bold">Lets see if you payed attention in Dragon School</p>
       <hr />
-      <p>Who's the main star in Interstellar?</p>
+      <p>Who is the chief of Berk?</p>
       <input id="input1" type="text" />
       <p id="output1" class="bold">---</p>
       <p>
-        Whats the name of the professor that sends away the cast members on
-        their journey?
+        What dragon does Hiccup have?
       </p>
       <input id="input2" type="text" />
       <p id="output2" class="bold">---</p>
-      <p>When was Interstellar released?</p>
+      <p>When was the first HTTYD movie released?</p>
       <input id="input3" type="text" />
       <p id="output3" class="bold">---</p>
-      <p>Where was Interstellar MAINLY filmed?</p>
+      <p>Which musician made the soundtracks for HTTYD?</p>
       <input id="input4" type="text" />
       <p id="output4" class="bold">---</p>
       <p>
